# omnisvg-data-process

./: .gitignore  README.md  main.py  paper.md  paper_zh.md  pyproject.toml
omnisvg_data_process/: __init__.py  constants.py  detokenize.py  entokenize.py  logger.py  main.py  normalizer.py  tokenize.py  tokenizer.py  utils.py
scripts/: add_tokens.py  build_sft_dataset.py  filter_media_tokens.py  inference_test.py  merge_tokenizer.py  resize_model_embeddings.py
tests/: fixture.py  test_tokenizer.py
